# C-Project-Template

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  CMakePresets.json  C_Project_Template.code-workspace  LICENSE  README.md  TODO.md
app/: CMakeLists.txt  app.cpp
cmake/: ArduinoDueCore.cmake  CMakeFormat.cmake  CMakeLint.cmake  ClangFormat.cmake  ClangTidy.cmake  GetGitRepo.cmake  LittleFS.cmake  ReportUtility.cmake  SetupUtility.cmake
cmake/templates/: version.h.in
scripts/: build.sh  clean.sh  flash.sh  report-clang-format.sh  report-clang-tidy.sh  report-cmake-lint.sh  run-clang-format.sh  run-cmake-format.sh
src/dummy_module/: CMakeLists.txt  dummy_module.c  dummy_module.h
toolchains/: arm-gcc-sam3x.cmake
